[gd_scene load_steps=4 format=3 uid="uid://owmifl5gi0ks"]

[ext_resource type="Script" path="res://prefabs/dropoff_zone.gd" id="1_hjhgq"]
[ext_resource type="PackedScene" uid="uid://5bewye2ailts" path="res://prefabs/base_orb.tscn" id="2_17kk2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7sxrg"]
radius = 1.0

[node name="DropoffZone" type="Area3D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_hjhgq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_7sxrg")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.697051, 0)
billboard = 1
no_depth_test = true
texture_filter = 1
text = "Press 'E' to drop off"

[node name="BaseOrb" parent="." instance=ExtResource("2_17kk2")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
